overflow fix

--- a/src/app/pages/search/search.component.css
+++ b/src/app/pages/search/search.component.css
@@ -134,7 +134,7 @@ input{
 
 .sub-heading{
     display: flex;
-    gap: 2rem;
+    gap: 1rem;
     margin-bottom: 1.5rem;
 }
 
